fix: color, spacing and offset

--- a/src/components/ClickableTile/clickable-tile.scss
+++ b/src/components/ClickableTile/clickable-tile.scss
@@ -178,7 +178,7 @@ a.tile--article.tile--dark:hover {
 
 .tile--dark .tile__link-icon {
   svg {
-    fill: $carbon--white-0;
+    fill: $carbon--gray-10;
   }
 }
 
